--- a/templates/layout.html
+++ b/templates/layout.html
@@ -138,7 +138,8 @@
 <header class="card">
     <div class="top-nav">
         <div>
-            <a href="{{ url_for('index') }}">בחירת דירה</a>
+            <a href="{{ url_for('index') }}">בחירת דירה</a> &nbsp; | &nbsp;
+            <a href="{{ url_for('all_reports') }}">כל התקלות</a>
         </div>
         <div>
             ניהול דירות – דיווח תקלות וחוסרים
